# fastpy_todo

./: README.md  pyproject.toml
fastpy_todo/: app.py  database.py  models.py  schemas.py  security.py
fastpy_todo/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 20f618808f12_create_users_table.py  33c0d30689ef_add_updated_at_field_to_user_table_with_.py  d748e0b54a6b_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
